add image and favicon

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "Bloom"
 meta_title: "Bloom - connect doctors and face the unknown together"
 meta_description: "We connect doctors worldwide together. Build project with similar rare disease cases and find solution together!"
-meta_image: "home-banner.jpg"
+meta_image: "bloom-ogimage.jpg"
 # twitter_account: "@product_twitter_account"   # required for Twitter Cards
